Focus after select theme
Cursor on text after clic on theme selector

--- a/dvorakjs.html
+++ b/dvorakjs.html
@@ -132,9 +132,11 @@
             if (radio.value === 'oscuro') {
                 document.body.style.backgroundColor = '#404040';
                 document.body.style.color = 'white';
+                document.getElementById('output').focus();
             } else if (radio.value === 'claro') {
                 document.body.style.backgroundColor = '#fbfbfb';
                 document.body.style.color = 'black';
+                document.getElementById('output').focus();
             }
         }
     </script>
