--- a/dvorakjs.html
+++ b/dvorakjs.html
@@ -18,6 +18,7 @@
             height: 85vh;
             margin: auto;
             overflow-y: auto;
+            padding: 10px;
             width: 85ex;
         }
         #output:focus {outline: none;}
