Text theme transition

--- a/dvorakjs.html
+++ b/dvorakjs.html
@@ -12,6 +12,7 @@
             font-family: sans-serif;
             padding: 20px;
             transition: background-color 0.5s;
+            transition: color 0.5s;
         }
         #output {
             border: 1px solid #ccc;
